parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN body END
Rule 2     prog_vars -> vars
Rule 3     prog_vars -> empty
Rule 4     prog_funcs -> funcs prog_funcs
Rule 5     prog_funcs -> empty
Rule 6     body -> LBRACE body_prime RBRACE
Rule 7     body_prime -> statement body_prime
Rule 8     body_prime -> empty
Rule 9     assign -> ID EQUALS expression SEMICOLON
Rule 10    expression -> exp expression_prime
Rule 11    expression_prime -> GREATER exp
Rule 12    expression_prime -> LESS exp
Rule 13    expression_prime -> NOT_EQUALS exp
Rule 14    expression_prime -> empty
Rule 15    cte -> CTE_INT
Rule 16    cte -> CTE_FLOAT
Rule 17    funcs -> VOID ID LPAREN funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON
Rule 18    funcs_prime -> ID COLON type more_funcs
Rule 19    funcs_prime -> empty
Rule 20    more_funcs -> COMMA ID COLON type more_funcs
Rule 21    more_funcs -> empty
Rule 22    funcs_vars -> vars
Rule 23    funcs_vars -> empty
Rule 24    statement -> assign
Rule 25    statement -> condition
Rule 26    statement -> cycle
Rule 27    statement -> f_call
Rule 28    statement -> print
Rule 29    exp -> term exp_prime
Rule 30    exp_prime -> PLUS save_operator term process_operation exp_prime
Rule 31    exp_prime -> MINUS save_operator term process_operation exp_prime
Rule 32    exp_prime -> empty
Rule 33    save_operator -> <empty>
Rule 34    process_operation -> <empty>
Rule 35    term -> factor term_prime
Rule 36    term_prime -> TIMES save_operator factor process_operation term_prime
Rule 37    term_prime -> DIVIDE save_operator factor process_operation term_prime
Rule 38    term_prime -> empty
Rule 39    factor -> LPAREN expression RPAREN
Rule 40    factor -> PLUS factor_prime
Rule 41    factor -> MINUS factor_prime
Rule 42    factor -> factor_prime
Rule 43    factor_prime -> ID
Rule 44    factor_prime -> cte
Rule 45    vars -> VAR vars_prime
Rule 46    vars_prime -> ID id COLON type SEMICOLON vars_prime
Rule 47    vars_prime -> empty
Rule 48    id -> COMMA ID id
Rule 49    id -> empty
Rule 50    type -> INT
Rule 51    type -> FLOAT
Rule 52    print -> PRINT LPAREN print_prime RPAREN SEMICOLON
Rule 53    print_prime -> expression more_print
Rule 54    print_prime -> CTE_STRING more_print
Rule 55    more_print -> COMMA more_print_prime more_print
Rule 56    more_print -> empty
Rule 57    more_print_prime -> expression
Rule 58    more_print_prime -> CTE_STRING
Rule 59    if_condition -> <empty>
Rule 60    if_end -> <empty>
Rule 61    if_else_end -> <empty>
Rule 62    while_start -> <empty>
Rule 63    while_condition -> <empty>
Rule 64    while_end -> <empty>
Rule 65    cycle -> WHILE while_start LPAREN expression RPAREN while_condition DO body while_end SEMICOLON
Rule 66    condition -> IF LPAREN expression RPAREN if_condition body if_end else_condition if_else_end SEMICOLON
Rule 67    else_condition -> ELSE body
Rule 68    else_condition -> empty
Rule 69    f_call -> ID LPAREN f_call_prime RPAREN SEMICOLON
Rule 70    f_call_prime -> expression more_f_call
Rule 71    f_call_prime -> empty
Rule 72    more_f_call -> COMMA expression more_f_call
Rule 73    more_f_call -> empty
Rule 74    empty -> <empty>

Terminals, with rules where they appear

COLON                : 18 20 46
COMMA                : 20 48 55 72
CTE_FLOAT            : 16
CTE_INT              : 15
CTE_STRING           : 54 58
DIVIDE               : 37
DO                   : 65
ELSE                 : 67
END                  : 1
EQUALS               : 9
FLOAT                : 51
GREATER              : 11
ID                   : 1 9 17 18 20 43 46 48 69
IF                   : 66
INT                  : 50
LBRACE               : 6
LBRACKET             : 17
LESS                 : 12
LPAREN               : 17 39 52 65 66 69
MAIN                 : 1
MINUS                : 31 41
NOT_EQUALS           : 13
PLUS                 : 30 40
PRINT                : 52
PROGRAM              : 1
RBRACE               : 6
RBRACKET             : 17
RPAREN               : 17 39 52 65 66 69
SEMICOLON            : 1 9 17 46 52 65 66 69
TIMES                : 36
VAR                  : 45
VOID                 : 17
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

assign               : 24
body                 : 1 17 65 66 67
body_prime           : 6 7
condition            : 25
cte                  : 44
cycle                : 26
else_condition       : 66
empty                : 3 5 8 14 19 21 23 32 38 47 49 56 68 71 73
exp                  : 10 11 12 13
exp_prime            : 29 30 31
expression           : 9 39 53 57 65 66 70 72
expression_prime     : 10
f_call               : 27
f_call_prime         : 69
factor               : 35 36 37
factor_prime         : 40 41 42
funcs                : 4
funcs_prime          : 17
funcs_vars           : 17
id                   : 46 48
if_condition         : 66
if_else_end          : 66
if_end               : 66
more_f_call          : 70 72
more_funcs           : 18 20
more_print           : 53 54 55
more_print_prime     : 55
print                : 28
print_prime          : 52
process_operation    : 30 31 36 37
prog_funcs           : 1 4
prog_vars            : 1
program              : 0
save_operator        : 30 31 36 37
statement            : 7
term                 : 29 30 31
term_prime           : 35 36 37
type                 : 18 20 46
vars                 : 2 22
vars_prime           : 45 46
while_condition      : 65
while_end            : 65
while_start          : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON prog_vars prog_funcs MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON prog_vars prog_funcs MAIN body END

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . prog_vars prog_funcs MAIN body END
    (2) prog_vars -> . vars
    (3) prog_vars -> . empty
    (45) vars -> . VAR vars_prime
    (74) empty -> .

    VAR             shift and go to state 8
    VOID            reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)

    prog_vars                      shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON prog_vars . prog_funcs MAIN body END
    (4) prog_funcs -> . funcs prog_funcs
    (5) prog_funcs -> . empty
    (17) funcs -> . VOID ID LPAREN funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON
    (74) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 74 (empty -> .)

    prog_funcs                     shift and go to state 9
    funcs                          shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) prog_vars -> vars .

    VOID            reduce using rule 2 (prog_vars -> vars .)
    MAIN            reduce using rule 2 (prog_vars -> vars .)


state 7

    (3) prog_vars -> empty .

    VOID            reduce using rule 3 (prog_vars -> empty .)
    MAIN            reduce using rule 3 (prog_vars -> empty .)


state 8

    (45) vars -> VAR . vars_prime
    (46) vars_prime -> . ID id COLON type SEMICOLON vars_prime
    (47) vars_prime -> . empty
    (74) empty -> .

    ID              shift and go to state 14
    VOID            reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)
    LBRACE          reduce using rule 74 (empty -> .)

    vars_prime                     shift and go to state 13
    empty                          shift and go to state 15

state 9

    (1) program -> PROGRAM ID SEMICOLON prog_vars prog_funcs . MAIN body END

    MAIN            shift and go to state 16


state 10

    (4) prog_funcs -> funcs . prog_funcs
    (4) prog_funcs -> . funcs prog_funcs
    (5) prog_funcs -> . empty
    (17) funcs -> . VOID ID LPAREN funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON
    (74) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 74 (empty -> .)

    funcs                          shift and go to state 10
    prog_funcs                     shift and go to state 17
    empty                          shift and go to state 11

state 11

    (5) prog_funcs -> empty .

    MAIN            reduce using rule 5 (prog_funcs -> empty .)


state 12

    (17) funcs -> VOID . ID LPAREN funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON

    ID              shift and go to state 18


state 13

    (45) vars -> VAR vars_prime .

    VOID            reduce using rule 45 (vars -> VAR vars_prime .)
    MAIN            reduce using rule 45 (vars -> VAR vars_prime .)
    LBRACE          reduce using rule 45 (vars -> VAR vars_prime .)


state 14

    (46) vars_prime -> ID . id COLON type SEMICOLON vars_prime
    (48) id -> . COMMA ID id
    (49) id -> . empty
    (74) empty -> .

    COMMA           shift and go to state 20
    COLON           reduce using rule 74 (empty -> .)

    id                             shift and go to state 19
    empty                          shift and go to state 21

state 15

    (47) vars_prime -> empty .

    VOID            reduce using rule 47 (vars_prime -> empty .)
    MAIN            reduce using rule 47 (vars_prime -> empty .)
    LBRACE          reduce using rule 47 (vars_prime -> empty .)


state 16

    (1) program -> PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN . body END
    (6) body -> . LBRACE body_prime RBRACE

    LBRACE          shift and go to state 23

    body                           shift and go to state 22

state 17

    (4) prog_funcs -> funcs prog_funcs .

    MAIN            reduce using rule 4 (prog_funcs -> funcs prog_funcs .)


state 18

    (17) funcs -> VOID ID . LPAREN funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON

    LPAREN          shift and go to state 24


state 19

    (46) vars_prime -> ID id . COLON type SEMICOLON vars_prime

    COLON           shift and go to state 25


state 20

    (48) id -> COMMA . ID id

    ID              shift and go to state 26


state 21

    (49) id -> empty .

    COLON           reduce using rule 49 (id -> empty .)


state 22

    (1) program -> PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN body . END

    END             shift and go to state 27


state 23

    (6) body -> LBRACE . body_prime RBRACE
    (7) body_prime -> . statement body_prime
    (8) body_prime -> . empty
    (24) statement -> . assign
    (25) statement -> . condition
    (26) statement -> . cycle
    (27) statement -> . f_call
    (28) statement -> . print
    (74) empty -> .
    (9) assign -> . ID EQUALS expression SEMICOLON
    (66) condition -> . IF LPAREN expression RPAREN if_condition body if_end else_condition if_else_end SEMICOLON
    (65) cycle -> . WHILE while_start LPAREN expression RPAREN while_condition DO body while_end SEMICOLON
    (69) f_call -> . ID LPAREN f_call_prime RPAREN SEMICOLON
    (52) print -> . PRINT LPAREN print_prime RPAREN SEMICOLON

    RBRACE          reduce using rule 74 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    PRINT           shift and go to state 39

    body_prime                     shift and go to state 28
    statement                      shift and go to state 29
    empty                          shift and go to state 30
    assign                         shift and go to state 31
    condition                      shift and go to state 32
    cycle                          shift and go to state 33
    f_call                         shift and go to state 34
    print                          shift and go to state 35

state 24

    (17) funcs -> VOID ID LPAREN . funcs_prime RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON
    (18) funcs_prime -> . ID COLON type more_funcs
    (19) funcs_prime -> . empty
    (74) empty -> .

    ID              shift and go to state 40
    RPAREN          reduce using rule 74 (empty -> .)

    funcs_prime                    shift and go to state 41
    empty                          shift and go to state 42

state 25

    (46) vars_prime -> ID id COLON . type SEMICOLON vars_prime
    (50) type -> . INT
    (51) type -> . FLOAT

    INT             shift and go to state 44
    FLOAT           shift and go to state 45

    type                           shift and go to state 43

state 26

    (48) id -> COMMA ID . id
    (48) id -> . COMMA ID id
    (49) id -> . empty
    (74) empty -> .

    COMMA           shift and go to state 20
    COLON           reduce using rule 74 (empty -> .)

    id                             shift and go to state 46
    empty                          shift and go to state 21

state 27

    (1) program -> PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN body END .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON prog_vars prog_funcs MAIN body END .)


state 28

    (6) body -> LBRACE body_prime . RBRACE

    RBRACE          shift and go to state 47


state 29

    (7) body_prime -> statement . body_prime
    (7) body_prime -> . statement body_prime
    (8) body_prime -> . empty
    (24) statement -> . assign
    (25) statement -> . condition
    (26) statement -> . cycle
    (27) statement -> . f_call
    (28) statement -> . print
    (74) empty -> .
    (9) assign -> . ID EQUALS expression SEMICOLON
    (66) condition -> . IF LPAREN expression RPAREN if_condition body if_end else_condition if_else_end SEMICOLON
    (65) cycle -> . WHILE while_start LPAREN expression RPAREN while_condition DO body while_end SEMICOLON
    (69) f_call -> . ID LPAREN f_call_prime RPAREN SEMICOLON
    (52) print -> . PRINT LPAREN print_prime RPAREN SEMICOLON

    RBRACE          reduce using rule 74 (empty -> .)
    ID              shift and go to state 36
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    PRINT           shift and go to state 39

    statement                      shift and go to state 29
    body_prime                     shift and go to state 48
    empty                          shift and go to state 30
    assign                         shift and go to state 31
    condition                      shift and go to state 32
    cycle                          shift and go to state 33
    f_call                         shift and go to state 34
    print                          shift and go to state 35

state 30

    (8) body_prime -> empty .

    RBRACE          reduce using rule 8 (body_prime -> empty .)


state 31

    (24) statement -> assign .

    ID              reduce using rule 24 (statement -> assign .)
    IF              reduce using rule 24 (statement -> assign .)
    WHILE           reduce using rule 24 (statement -> assign .)
    PRINT           reduce using rule 24 (statement -> assign .)
    RBRACE          reduce using rule 24 (statement -> assign .)


state 32

    (25) statement -> condition .

    ID              reduce using rule 25 (statement -> condition .)
    IF              reduce using rule 25 (statement -> condition .)
    WHILE           reduce using rule 25 (statement -> condition .)
    PRINT           reduce using rule 25 (statement -> condition .)
    RBRACE          reduce using rule 25 (statement -> condition .)


state 33

    (26) statement -> cycle .

    ID              reduce using rule 26 (statement -> cycle .)
    IF              reduce using rule 26 (statement -> cycle .)
    WHILE           reduce using rule 26 (statement -> cycle .)
    PRINT           reduce using rule 26 (statement -> cycle .)
    RBRACE          reduce using rule 26 (statement -> cycle .)


state 34

    (27) statement -> f_call .

    ID              reduce using rule 27 (statement -> f_call .)
    IF              reduce using rule 27 (statement -> f_call .)
    WHILE           reduce using rule 27 (statement -> f_call .)
    PRINT           reduce using rule 27 (statement -> f_call .)
    RBRACE          reduce using rule 27 (statement -> f_call .)


state 35

    (28) statement -> print .

    ID              reduce using rule 28 (statement -> print .)
    IF              reduce using rule 28 (statement -> print .)
    WHILE           reduce using rule 28 (statement -> print .)
    PRINT           reduce using rule 28 (statement -> print .)
    RBRACE          reduce using rule 28 (statement -> print .)


state 36

    (9) assign -> ID . EQUALS expression SEMICOLON
    (69) f_call -> ID . LPAREN f_call_prime RPAREN SEMICOLON

    EQUALS          shift and go to state 49
    LPAREN          shift and go to state 50


state 37

    (66) condition -> IF . LPAREN expression RPAREN if_condition body if_end else_condition if_else_end SEMICOLON

    LPAREN          shift and go to state 51


state 38

    (65) cycle -> WHILE . while_start LPAREN expression RPAREN while_condition DO body while_end SEMICOLON
    (62) while_start -> .

    LPAREN          reduce using rule 62 (while_start -> .)

    while_start                    shift and go to state 52

state 39

    (52) print -> PRINT . LPAREN print_prime RPAREN SEMICOLON

    LPAREN          shift and go to state 53


state 40

    (18) funcs_prime -> ID . COLON type more_funcs

    COLON           shift and go to state 54


state 41

    (17) funcs -> VOID ID LPAREN funcs_prime . RPAREN LBRACKET funcs_vars body RBRACKET SEMICOLON

    RPAREN          shift and go to state 55


state 42

    (19) funcs_prime -> empty .

    RPAREN          reduce using rule 19 (funcs_prime -> empty .)


state 43

    (46) vars_prime -> ID id COLON type . SEMICOLON vars_prime

    SEMICOLON       shift and go to state 56


state 44

    (50) type -> INT .

    SEMICOLON       reduce using rule 50 (type -> INT .)
    COMMA           reduce using rule 50 (type -> INT .)
    RPAREN          reduce using rule 50 (type -> INT .)


state 45

    (51) type -> FLOAT .

    SEMICOLON       reduce using rule 51 (type -> FLOAT .)
    COMMA           reduce using rule 51 (type -> FLOAT .)
    RPAREN          reduce using rule 51 (type -> FLOAT .)


state 46

    (48) id -> COMMA ID id .

    COLON           reduce using rule 48 (id -> COMMA ID id .)


state 47

    (6) body -> LBRACE body_prime RBRACE .

    END             reduce using rule 6 (body -> LBRACE body_prime RBRACE .)
    RBRACKET        reduce using rule 6 (body -> LBRACE body_prime RBRACE .)
    ELSE            reduce using rule 6 (body -> LBRACE body_prime RBRACE .)
    SEMICOLON       reduce using rule 6 (body -> LBRACE body_prime RBRACE .)


state 48

    (7) body_prime -> statement body_prime .

    RBRACE          reduce using rule 7 (body_prime -> statement body_prime .)


state 49

    (9) assign -> ID EQUALS . expression SEMICOLON
    (10) expression -> . exp expression_prime
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expression                     shift and go to state 58
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 50

    (69) f_call -> ID LPAREN . f_call_prime RPAREN SEMICOLON
    (70) f_call_prime -> . expression more_f_call
    (71) f_call_prime -> . empty
    (10) expression -> . exp expression_prime
    (74) empty -> .
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    RPAREN          reduce using rule 74 (empty -> .)
    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    f_call_prime                   shift and go to state 69
    expression                     shift and go to state 70
    empty                          shift and go to state 71
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 51

    (66) condition -> IF LPAREN . expression RPAREN if_condition body if_end else_condition if_else_end SEMICOLON
    (10) expression -> . exp expression_prime
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expression                     shift and go to state 72
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 52

    (65) cycle -> WHILE while_start . LPAREN expression RPAREN while_condition DO body while_end SEMICOLON

    LPAREN          shift and go to state 73


state 53

    (52) print -> PRINT LPAREN . print_prime RPAREN SEMICOLON
    (53) print_prime -> . expression more_print
    (54) print_prime -> . CTE_STRING more_print
    (10) expression -> . exp expression_prime
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    CTE_STRING      shift and go to state 76
    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    print_prime                    shift and go to state 74
    expression                     shift and go to state 75
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 54

    (18) funcs_prime -> ID COLON . type more_funcs
    (50) type -> . INT
    (51) type -> . FLOAT

    INT             shift and go to state 44
    FLOAT           shift and go to state 45

    type                           shift and go to state 77

state 55

    (17) funcs -> VOID ID LPAREN funcs_prime RPAREN . LBRACKET funcs_vars body RBRACKET SEMICOLON

    LBRACKET        shift and go to state 78


state 56

    (46) vars_prime -> ID id COLON type SEMICOLON . vars_prime
    (46) vars_prime -> . ID id COLON type SEMICOLON vars_prime
    (47) vars_prime -> . empty
    (74) empty -> .

    ID              shift and go to state 14
    VOID            reduce using rule 74 (empty -> .)
    MAIN            reduce using rule 74 (empty -> .)
    LBRACE          reduce using rule 74 (empty -> .)

    vars_prime                     shift and go to state 79
    empty                          shift and go to state 15

state 57

    (43) factor_prime -> ID .

    TIMES           reduce using rule 43 (factor_prime -> ID .)
    DIVIDE          reduce using rule 43 (factor_prime -> ID .)
    PLUS            reduce using rule 43 (factor_prime -> ID .)
    MINUS           reduce using rule 43 (factor_prime -> ID .)
    GREATER         reduce using rule 43 (factor_prime -> ID .)
    LESS            reduce using rule 43 (factor_prime -> ID .)
    NOT_EQUALS      reduce using rule 43 (factor_prime -> ID .)
    SEMICOLON       reduce using rule 43 (factor_prime -> ID .)
    COMMA           reduce using rule 43 (factor_prime -> ID .)
    RPAREN          reduce using rule 43 (factor_prime -> ID .)


state 58

    (9) assign -> ID EQUALS expression . SEMICOLON

    SEMICOLON       shift and go to state 80


state 59

    (10) expression -> exp . expression_prime
    (11) expression_prime -> . GREATER exp
    (12) expression_prime -> . LESS exp
    (13) expression_prime -> . NOT_EQUALS exp
    (14) expression_prime -> . empty
    (74) empty -> .

    GREATER         shift and go to state 82
    LESS            shift and go to state 83
    NOT_EQUALS      shift and go to state 84
    SEMICOLON       reduce using rule 74 (empty -> .)
    COMMA           reduce using rule 74 (empty -> .)
    RPAREN          reduce using rule 74 (empty -> .)

    expression_prime               shift and go to state 81
    empty                          shift and go to state 85

state 60

    (29) exp -> term . exp_prime
    (30) exp_prime -> . PLUS save_operator term process_operation exp_prime
    (31) exp_prime -> . MINUS save_operator term process_operation exp_prime
    (32) exp_prime -> . empty
    (74) empty -> .

    PLUS            shift and go to state 87
    MINUS           shift and go to state 88
    GREATER         reduce using rule 74 (empty -> .)
    LESS            reduce using rule 74 (empty -> .)
    NOT_EQUALS      reduce using rule 74 (empty -> .)
    SEMICOLON       reduce using rule 74 (empty -> .)
    COMMA           reduce using rule 74 (empty -> .)
    RPAREN          reduce using rule 74 (empty -> .)

    exp_prime                      shift and go to state 86
    empty                          shift and go to state 89

state 61

    (35) term -> factor . term_prime
    (36) term_prime -> . TIMES save_operator factor process_operation term_prime
    (37) term_prime -> . DIVIDE save_operator factor process_operation term_prime
    (38) term_prime -> . empty
    (74) empty -> .

    TIMES           shift and go to state 91
    DIVIDE          shift and go to state 92
    PLUS            reduce using rule 74 (empty -> .)
    MINUS           reduce using rule 74 (empty -> .)
    GREATER         reduce using rule 74 (empty -> .)
    LESS            reduce using rule 74 (empty -> .)
    NOT_EQUALS      reduce using rule 74 (empty -> .)
    SEMICOLON       reduce using rule 74 (empty -> .)
    COMMA           reduce using rule 74 (empty -> .)
    RPAREN          reduce using rule 74 (empty -> .)

    term_prime                     shift and go to state 90
    empty                          shift and go to state 93

state 62

    (39) factor -> LPAREN . expression RPAREN
    (10) expression -> . exp expression_prime
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expression                     shift and go to state 94
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 63

    (40) factor -> PLUS . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    factor_prime                   shift and go to state 95
    cte                            shift and go to state 66

state 64

    (42) factor -> factor_prime .

    TIMES           reduce using rule 42 (factor -> factor_prime .)
    DIVIDE          reduce using rule 42 (factor -> factor_prime .)
    PLUS            reduce using rule 42 (factor -> factor_prime .)
    MINUS           reduce using rule 42 (factor -> factor_prime .)
    GREATER         reduce using rule 42 (factor -> factor_prime .)
    LESS            reduce using rule 42 (factor -> factor_prime .)
    NOT_EQUALS      reduce using rule 42 (factor -> factor_prime .)
    SEMICOLON       reduce using rule 42 (factor -> factor_prime .)
    COMMA           reduce using rule 42 (factor -> factor_prime .)
    RPAREN          reduce using rule 42 (factor -> factor_prime .)


state 65

    (41) factor -> MINUS . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    factor_prime                   shift and go to state 96
    cte                            shift and go to state 66

state 66

    (44) factor_prime -> cte .

    TIMES           reduce using rule 44 (factor_prime -> cte .)
    DIVIDE          reduce using rule 44 (factor_prime -> cte .)
    PLUS            reduce using rule 44 (factor_prime -> cte .)
    MINUS           reduce using rule 44 (factor_prime -> cte .)
    GREATER         reduce using rule 44 (factor_prime -> cte .)
    LESS            reduce using rule 44 (factor_prime -> cte .)
    NOT_EQUALS      reduce using rule 44 (factor_prime -> cte .)
    SEMICOLON       reduce using rule 44 (factor_prime -> cte .)
    COMMA           reduce using rule 44 (factor_prime -> cte .)
    RPAREN          reduce using rule 44 (factor_prime -> cte .)


state 67

    (15) cte -> CTE_INT .

    TIMES           reduce using rule 15 (cte -> CTE_INT .)
    DIVIDE          reduce using rule 15 (cte -> CTE_INT .)
    PLUS            reduce using rule 15 (cte -> CTE_INT .)
    MINUS           reduce using rule 15 (cte -> CTE_INT .)
    GREATER         reduce using rule 15 (cte -> CTE_INT .)
    LESS            reduce using rule 15 (cte -> CTE_INT .)
    NOT_EQUALS      reduce using rule 15 (cte -> CTE_INT .)
    SEMICOLON       reduce using rule 15 (cte -> CTE_INT .)
    COMMA           reduce using rule 15 (cte -> CTE_INT .)
    RPAREN          reduce using rule 15 (cte -> CTE_INT .)


state 68

    (16) cte -> CTE_FLOAT .

    TIMES           reduce using rule 16 (cte -> CTE_FLOAT .)
    DIVIDE          reduce using rule 16 (cte -> CTE_FLOAT .)
    PLUS            reduce using rule 16 (cte -> CTE_FLOAT .)
    MINUS           reduce using rule 16 (cte -> CTE_FLOAT .)
    GREATER         reduce using rule 16 (cte -> CTE_FLOAT .)
    LESS            reduce using rule 16 (cte -> CTE_FLOAT .)
    NOT_EQUALS      reduce using rule 16 (cte -> CTE_FLOAT .)
    SEMICOLON       reduce using rule 16 (cte -> CTE_FLOAT .)
    COMMA           reduce using rule 16 (cte -> CTE_FLOAT .)
    RPAREN          reduce using rule 16 (cte -> CTE_FLOAT .)


state 69

    (69) f_call -> ID LPAREN f_call_prime . RPAREN SEMICOLON

    RPAREN          shift and go to state 97


state 70

    (70) f_call_prime -> expression . more_f_call
    (72) more_f_call -> . COMMA expression more_f_call
    (73) more_f_call -> . empty
    (74) empty -> .

    COMMA           shift and go to state 99
    RPAREN          reduce using rule 74 (empty -> .)

    more_f_call                    shift and go to state 98
    empty                          shift and go to state 100

state 71

    (71) f_call_prime -> empty .

    RPAREN          reduce using rule 71 (f_call_prime -> empty .)


state 72

    (66) condition -> IF LPAREN expression . RPAREN if_condition body if_end else_condition if_else_end SEMICOLON

    RPAREN          shift and go to state 101


state 73

    (65) cycle -> WHILE while_start LPAREN . expression RPAREN while_condition DO body while_end SEMICOLON
    (10) expression -> . exp expression_prime
    (29) exp -> . term exp_prime
    (35) term -> . factor term_prime
    (39) factor -> . LPAREN expression RPAREN
    (40) factor -> . PLUS factor_prime
    (41) factor -> . MINUS factor_prime
    (42) factor -> . factor_prime
    (43) factor_prime -> . ID
    (44) factor_prime -> . cte
    (15) cte -> . CTE_INT
    (16) cte -> . CTE_FLOAT

    LPAREN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 65
    ID              shift and go to state 57
    CTE_INT         shift and go to state 67
    CTE_FLOAT       shift and go to state 68

    expression                     shift and go to state 102
    exp                            shift and go to state 59
    term                           shift and go to state 60
    factor                         shift and go to state 61
    factor_prime                   shift and go to state 64
    cte                            shift and go to state 66

state 74

    (52) print -> PRINT LPAREN print_prime . RPAREN SEMICOLON

    RPAREN          shift and go to state 103


state 75

    (53) print_prime -> expression . more_print
    (55) more_print -> . COMMA more_print_prime more_print
    (56) more_print -> . empty
    (74) empty -> .

    COMMA           shift and go to state 105
    RPAREN          reduce using rule 74 (empty -> .)

    more_print                     shift and go to state 104
    empty                          shift and go to state 106

state 76

    (54) print_prime -> CTE_STRING . more_print
    (55) more_print -> . COMMA more_print_prime more_print
    (56) more_print -> . empty
    (74) empty -> .

    COMMA           shift and go to state 105
    RPAREN          reduce using rule 74 (empty -> .)
